# da_for_polymers

./: .bash_aliases  .gitignore  README.md  environment.yaml  setup.cfg
da_for_polymers/ML_models/: README.md  summary.py  summary_chemprop.py  summary_chemprop.sh
da_for_polymers/ML_models/pytorch/: pipeline.py  tokenizer.py  train.py
da_for_polymers/ML_models/sklearn/: pipeline.py  tokenizer.py  train.py
da_for_polymers/data/automated_fragment/: auto_augment.py  compare_manual_and_automated.py
da_for_polymers/data/automated_fragment_algorithm/: auto_augment.py
da_for_polymers/data/automated_fragmentation/: auto_augment.py  auto_augmented_fragment.py
da_for_polymers/data/input_representation/: README.md  cross_validation.py  cross_validation.sh  rename_files.py  template.csv
da_for_polymers/training/: README.md
da_for_polymers/visualization/: aggregate_results.py  all_results.csv  all_results.xlsx  barplot.py  barplot_config.json  barplot_data.py  boxplot.py  fingerprints_equal.py  heatmap.py  heatmap_config.json  literature_data.xlsx  path_utils.py  recreate_all_plots.sh
da_for_polymers/visualization/CO2_Soleimani/: CO2_Soleimani_r2_heatmap.afdesign  CO2_Soleimani_results.csv  heatmap_figure3.py
da_for_polymers/visualization/DFT_Ramprasad/: DFT_Ramprasad_r2_heatmap.afdesign
da_for_polymers/visualization/PV_Wang/: PV_Wang_r2_heatmap.afdesign  PV_Wang_results.csv  heatmap_figure4.py
da_for_polymers/visualization/Swelling_Xu/: Swelling_Xu_results.csv  heatmap_figure5.py
da_for_polymers/visualization/dataset_comparisons/: barplot_data_figureS14.py  (+1 more)
(+7785 files in other folders)
