[metadata]
name = da_for_polymers
version = 0.0.1
description = "Improving ML Models using a Novel Data Augmentation for Polymer Datasets."
long_description = file: README.md
author = "Stanley Lo", "Theophile Gaudin", "Martin Seifrid"
author_email = ""
url= ""
# Did we have any license in mind?
license = MIT
keywords =  Polymers, Machine Learning, Deep Learning
classifiers =
    Programming Language :: Python :: 3.9


[options]
packages = find:
include_package_data = True
install_requires = 
  rich >= 10.1.0
  wandb >= 0.11.0
  torch >= 1.9.0
  pytorch_lightning
  matplotlib
  pandas
  scikit-learn
  pillow
  numpy
  xgboost
  selfies
  scikit-optimize
  seaborn
  pkg_resources


[options.packages.find]
exclude = 
  tests
  docs

